initial comment theming

--- a/public/sites/all/themes/gesso/patternlab/public/patterns/02-organisms-01-content-types-innovation/02-organisms-01-content-types-innovation.html
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/02-organisms-01-content-types-innovation/02-organisms-01-content-types-innovation.html
@@ -352,22 +352,39 @@
                   <input type="submit" class="button button--submit" value="Comment">
                 </div>
               </form>
-              <div class="layout-slat comment comment--by-node-author view-mode-full">
+            
+                
+              <div class="layout-slat comment view-mode-full">
                 <div class="layout-slat__media">
-                  <span>
-                    <a class="username" title="View user profile." href="/users/forumone">forumone</a>
-                  </span>
-                </div>
-                <div class="layout-slat__content">
-                  <div class="field field--post-date">
-                    <div class="field-items">
-                      <div class="field-item even">03/10/2015 - 4:29pm</div>
+                  <div class="view view-comment-author">
+                    <div class="views-row">      
+                      <div class="views-field views-field-rendered-entity">        
+                        <span class="field-content">
+                          <div class="user-profile view-mode-user_teaser profile-thumb">
+                            <div class="field profile-thumb__image--rounded">
+                              <a href="#"><img alt="" src="../../images-patternlab/sherlock-78-78.jpg"></a>
+                            </div>
+                            <div class="field profile-thumb__name">
+                              <a href="#">Sherlock Holmes</a>
+                            </div>
+                          </div>
+                        </span>  
+                      </div>  
                     </div>
                   </div>
-                  <div class="field field--comment-body">
-                    <div class="field-items">
-                      <div class="field-item even">
-                        <p>Now !</p>
+                </div>
+                <div class="layout-slat__content">
+                  <div class="comment__content">
+                    <div class="field field--post-date">
+                      <div class="field-items">
+                        <div class="field-item even">03/10/2015 - 4:29pm</div>
+                      </div>
+                    </div>
+                    <div class="field field--comment-body">
+                      <div class="field-items">
+                        <div class="field-item even">
+                          <p>Oh, what, now? I'm in shock! Look, I've got a blanket.</p>
+                        </div>
                       </div>
                     </div>
                   </div>
@@ -381,18 +398,35 @@
               <div class="indented">
                 <div class="layout-slat comment comment--by-node-author view-mode-full">
                   <div class="layout-slat__media">
-                    <a class="username" title="View user profile." href="/users/forumone">forumone</a>
-                  </div>
-                  <div class="layout-slat__content">
-                    <div class="field field--post-date">
-                      <div class="field-items">
-                        <div class="field-item even">03/10/2015 - 4:30pm</div>
+                    <div class="view view-comment-author">
+                      <div class="views-row">      
+                        <div class="views-field views-field-rendered-entity">        
+                          <span class="field-content">
+                            <div class="user-profile view-mode-user_teaser profile-thumb">
+                              <div class="field profile-thumb__image--rounded">
+                                <a href="#"><img alt="" src="../../images-patternlab/buffy-78-78.jpg"></a>
+                              </div>
+                              <div class="field profile-thumb__name">
+                                <a href="#">Buffy Summers</a>
+                              </div>
+                            </div>
+                          </span>  
+                        </div>  
                       </div>
                     </div>
-                    <div class="field field--comment-body">
-                      <div class="field-items">
-                        <div class="field-item even">
-                          <p>Reply</p>
+                  </div>
+                  <div class="layout-slat__content">
+                    <div class="comment__content">
+                      <div class="field field--post-date">
+                        <div class="field-items">
+                          <div class="field-item even">03/10/2015 - 4:33pm</div>
+                        </div>
+                      </div>
+                      <div class="field field--comment-body">
+                        <div class="field-items">
+                          <div class="field-item even">
+                            <p>It's my first day! I was afraid that I was gonna be behind in all my classes, that I wouldn't make any friends, that I would have last month's hair. I didn't think there'd be vampires on campus.</p>
+                          </div>
                         </div>
                       </div>
                     </div>
@@ -406,18 +440,35 @@
                 <div class="indented">
                   <div class="layout-slat comment comment--by-node-author view-mode-full">
                     <div class="layout-slat__media">
-                      <a class="username" title="View user profile." href="/users/forumone">forumone</a>
-                    </div>
-                    <div class="layout-slat__content">
-                      <div class="field field--post-date">
-                        <div class="field-items">
-                          <div class="field-item even">03/10/2015 - 4:30pm</div>
+                      <div class="view view-comment-author">
+                        <div class="views-row">      
+                          <div class="views-field views-field-rendered-entity">        
+                            <span class="field-content">
+                              <div class="user-profile view-mode-user_teaser profile-thumb">
+                                <div class="field profile-thumb__image--rounded">
+                                  <a href="#"><img alt="" src="../../images-patternlab/willow-78-78.jpg"></a>
+                                </div>
+                                <div class="field profile-thumb__name">
+                                  <a href="#">Willow Rosenberg</a>
+                                </div>
+                              </div>
+                            </span>  
+                          </div>  
                         </div>
                       </div>
-                      <div class="field field--comment-body">
-                        <div class="field-items">
-                          <div class="field-item even">
-                            <p>Reply</p>
+                    </div>
+                    <div class="layout-slat__content">
+                      <div class="comment__content">
+                        <div class="field field--post-date">
+                          <div class="field-items">
+                            <div class="field-item even">03/10/2015 - 4:34pm</div>
+                          </div>
+                        </div>
+                        <div class="field field--comment-body">
+                          <div class="field-items">
+                            <div class="field-item even">
+                              <p>Well, when I'm with a boy I like, it's hard for me to say anything cool or witty or at all. I can usually make a few vowel sounds, and then I have to go away.</p>
+                            </div>
                           </div>
                         </div>
                       </div>
@@ -431,20 +482,37 @@
                   <div class="indented">
                     <div class="layout-slat comment comment--by-node-author view-mode-full">
                       <div class="layout-slat__media">
-                        <a class="username" title="View user profile." href="/users/forumone">forumone</a>
-                      </div>
-                      <div class="layout-slat__content">
-                        <div class="field field--post-date">
-                          <div class="field-items">
-                            <div class="field-item even">03/10/2015 - 4:30pm</div>
+                        <div class="view view-comment-author">
+                          <div class="views-row">      
+                            <div class="views-field views-field-rendered-entity">        
+                              <span class="field-content">
+                                <div class="user-profile view-mode-user_teaser profile-thumb">
+                                  <div class="field profile-thumb__image--rounded">
+                                    <a href="#"><img alt="" src="../../images-patternlab/sherlock-78-78.jpg"></a>
+                                  </div>
+                                  <div class="field profile-thumb__name">
+                                    <a href="#">Sherlock Holmes</a>
+                                  </div>
+                                </div>
+                              </span>  
+                            </div>  
                           </div>
                         </div>
-                        <div class="field field--comment-body">
-                          <div class="field-items">
-                            <div class="field-item even">
-                              <p>Reply</p>
+                      </div>
+                      <div class="layout-slat__content">
+                        <div class="comment__content">
+                          <div class="field field--post-date">
+                            <div class="field-items">
+                              <div class="field-item even">03/10/2015 - 4:35pm</div>
                             </div>
                           </div>
+                          <div class="field field--comment-body">
+                            <div class="field-items">
+                              <div class="field-item even">
+                                <p>Shut up everybody, shut up! Don't move, don't speak, don't breathe, I'm trying to think. Anderson, face the other way, you're putting me off.</p>
+                              </div>
+                            </div>
+                          </div>            
                         </div>
                         <ul class="nav--inline nav--comment nav">
                           <li class="nav__item nav__item--comment-delete"><a class="nav__link" href="/comment/2/delete">delete</a></li>
@@ -454,6 +522,47 @@
                       </div>
                     </div>
                   </div>
+                </div>
+              </div>
+              <div class="layout-slat comment view-mode-full">
+                <div class="layout-slat__media">
+                  <div class="view view-comment-author">
+                    <div class="views-row">      
+                      <div class="views-field views-field-rendered-entity">        
+                        <span class="field-content">
+                          <div class="user-profile view-mode-user_teaser profile-thumb">
+                            <div class="field profile-thumb__image--rounded">
+                              <a href="#"><img alt="" src="../../images-patternlab/sherlock-78-78.jpg"></a>
+                            </div>
+                            <div class="field profile-thumb__name">
+                              <a href="#">Sherlock Holmes</a>
+                            </div>
+                          </div>
+                        </span>  
+                      </div>  
+                    </div>
+                  </div>
+                </div>
+                <div class="layout-slat__content">
+                  <div class="comment__content">
+                    <div class="field field--post-date">
+                      <div class="field-items">
+                        <div class="field-item even">03/12/2015 - 3:33pm</div>
+                      </div>
+                    </div>
+                    <div class="field field--comment-body">
+                      <div class="field-items">
+                        <div class="field-item even">
+                          <p>You, being all mysterious with your cheekbones and turning your coat collar up so you look cool.</p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <ul class="nav--inline nav--comment nav">
+                    <li class="nav__item nav__item--comment-delete"><a class="nav__link" href="/comment/1/delete">delete</a></li>
+                    <li class="nav__item nav__item--comment-delete nav__item nav__item--comment-edit"><a class="nav__link" href="/comment/1/edit">edit</a></li>
+                    <li class="nav__item nav__item--comment-delete nav__item nav__item--comment-edit nav__item nav__item--comment-reply"><a class="nav__link" href="/comment/reply/2/1">reply</a></li>
+                  </ul>
                 </div>
               </div>
             </section>      
