--- a/public/sites/all/themes/gesso/patternlab/public/patterns/03-templates-card-types/03-templates-card-types.html
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/03-templates-card-types/03-templates-card-types.html
@@ -557,7 +557,7 @@
                       <article class="card">
                         <div class="card__content">
                           <h2 class="card__date">September 21</h2>
-                          <h3 class="card__primary-title"><a href="http://chrisvalleskey.com/fillerama/">Rebel Mission to Ord Mantell</a></h3>
+                          <h3 class="card__primary-title"><a href="http://www.niemanlab.org/journo-ipsum/">Marshall McLuhan Colbert bump backpack journalist vast wasteland Romenesko CPM</a></h3>
                           <div class="card__meta">
                             <div class="card__list">
                               <div class="card__list-label">Location:</div> United States
@@ -572,7 +572,7 @@
                       <article class="card">
                         <div class="card__content">
                           <h2 class="card__date">September 21</h2>
-                          <h3 class="card__primary-title"><a href="http://cupcakeipsum.com/">Danish danish candy canes bonbon cheesecake danish marzipan</a></h3>
+                          <h3 class="card__primary-title"><a href="http://www.cheeseipsum.co.uk/">Cottage cheese brie lancashire. Boursin when the cheese comes out.</a></h3>
                           <div class="card__meta">
                             <div class="card__list">
                               <div class="card__list-label">Location:</div> United States
@@ -587,7 +587,7 @@
                       <article class="card">
                         <div class="card__content">
                           <h2 class="card__date">September 21</h2>
-                          <h3 class="card__primary-title"><a href="http://baconipsum.com/">Bacon ipsum dolor sit amet turducken strip steak beef ribs shank</a></h3>
+                          <h3 class="card__primary-title"><a href="http://chrisvalleskey.com/fillerama/">Help, help, I'm being repressed!</a></h3>
                           <div class="card__meta">
                             <div class="card__list">
                               <div class="card__list-label">Location:</div> United States
@@ -609,12 +609,12 @@
                     <div class="views-row">
                       <article class="card">
                         <div class="card__image">
-                          <a href="http://chrisvalleskey.com/fillerama/"><img src="http://lorempixel.com/500/300/transport/3/" alt="Card 5:3" height="300" width="500">
+                          <a href="http://www.niemanlab.org/journo-ipsum/"><img src="http://lorempixel.com/500/300/nature/3/" alt="Card 5:3" height="300" width="500">
 </a>
                         </div>
                         <div class="card__content">
-                          <h3 class="card__title"><a href="http://chrisvalleskey.com/fillerama/">Rebel Mission to Ord Mantell</a></h3>
-                          <div><p>I find your lack of faith disturbing. A tremor in the Force. The last time I felt it was in the presence of my old master. Don't act so surprised, Your Highness. You weren't on any mercy mission this time. Several transmissions were beamed to this ship by Rebel spies. I want to know what happened to the plans they sent you. The plans you refer to will soon be back in our hands.</p></div>
+                          <h3 class="card__title"><a href="http://www.niemanlab.org/journo-ipsum/">Marshall McLuhan Colbert bump backpack journalist vast wasteland Romenesko CPM</a></h3>
+                          <div><p>Like button audience atomization overcome Colbert bump Free Darko inverted pyramid we will make them pay, digital circulation strategy Like button totally blowing up on Twitter church of the savvy. Pictures of Goats section open source discuss Frontline analog thinking filters paidContent.</p></div>
                           <div class="card__counts">
                             <div class="view">
                               <div class="has-icon--evidence" title="Evidence">0</div>
@@ -638,12 +638,12 @@
                     <div class="views-row">
                       <article class="card">
                         <div class="card__image">
-                          <a href="http://cupcakeipsum.com/"><img src="http://lorempixel.com/500/300/nightlife/3/" alt="Card 5:3" height="300" width="500">
+                          <a href="http://www.cheeseipsum.co.uk/"><img src="http://lorempixel.com/500/300/abstract/3/" alt="Card 5:3" height="300" width="500">
 </a>
                         </div>
                         <div class="card__content">
-                          <h3 class="card__title"><a href="http://cupcakeipsum.com/">Danish danish candy canes bonbon cheesecake danish marzipan</a></h3>
-                          <div><p>Sugar plum wafer soufflé ice cream. Wafer topping biscuit pie gummi bears topping. Gummies toffee powder applicake oat cake cookie. Bear claw candy tootsie roll fruitcake danish applicake candy canes macaroon. Liquorice tiramisu danish cotton candy gummies. Tiramisu dessert gummi bears macaroon sweet roll jelly-o gummi bears marzipan.</p></div>
+                          <h3 class="card__title"><a href="http://www.cheeseipsum.co.uk/">Cottage cheese brie lancashire. Boursin when the cheese comes out.</a></h3>
+                          <div><p>Queso caerphilly cheesecake. Parmesan chalk and cheese port-salut port-salut babybel cottage cheese cheesy grin pepper jack. Croque monsieur paneer st. agur blue cheese emmental airedale monterey jack bavarian bergkase cheese triangles. Halloumi parmesan.</p></div>
                           <div class="card__counts">
                             <div class="view">
                               <div class="has-icon--evidence" title="Evidence">0</div>
@@ -667,12 +667,12 @@
                     <div class="views-row">
                       <article class="card">
                         <div class="card__image">
-                          <a href="http://baconipsum.com/"><img src="http://lorempixel.com/500/300/city/3/" alt="Card 5:3" height="300" width="500">
+                          <a href="http://chrisvalleskey.com/fillerama/"><img src="http://lorempixel.com/500/300/cats/3/" alt="Card 5:3" height="300" width="500">
 </a>
                         </div>
                         <div class="card__content">
-                          <h3 class="card__title"><a href="http://baconipsum.com/">Bacon ipsum dolor sit amet turducken strip steak beef ribs shank</a></h3>
-                          <div><p>Boudin sausage jerky pastrami ground round salami biltong. Sausage fatback strip steak doner pork loin, pork belly drumstick ham short loin hamburger shankle. Short ribs sirloin rump tri-tip beef biltong. Meatball pig salami, jowl pork loin fatback short loin drumstick andouille.</p></div>
+                          <h3 class="card__title"><a href="http://chrisvalleskey.com/fillerama/">Help, help, I'm being repressed!</a></h3>
+                          <div><p>The Knights Who Say Ni demand a sacrifice! …Are you suggesting that coconuts migrate? Knights of Ni, we are but simple travelers who seek the enchanter who lives beyond these woods. You don't frighten us, English pig-dogs! Go and boil your bottoms, sons of a silly person! I blow my nose at you, so-called Ah-thoor Keeng, you and all your silly English K-n-n-n-n-n-n-n-niggits!</p></div>
                           <div class="card__counts">
                             <div class="view">
                               <div class="has-icon--evidence" title="Evidence">0</div>
@@ -705,7 +705,7 @@
                       <article class="card card--background">
                         <div class="card__content">
                           <h2 class="card__type">Toolkit</h2>
-                          <h3 class="card__title"><a href="http://chrisvalleskey.com/fillerama/">Rebel Mission to Ord Mantell</a></h3>
+                          <h3 class="card__title"><a href="http://www.niemanlab.org/journo-ipsum/">Marshall McLuhan Colbert bump backpack journalist vast wasteland Romenesko CPM</a></h3>
                           <div class="card__author">
                             <div class="card__author-inner">
                               <div class="card__author-image"><img src="../../images-patternlab/buffy-35-35.jpg"></div>
@@ -719,7 +719,7 @@
                       <article class="card card--background">
                         <div class="card__content">
                           <h2 class="card__type">Toolkit</h2>
-                          <h3 class="card__title"><a href="http://cupcakeipsum.com/">Danish danish candy canes bonbon cheesecake danish marzipan</a></h3>
+                          <h3 class="card__title"><a href="http://www.cheeseipsum.co.uk/">Cottage cheese brie lancashire. Boursin when the cheese comes out.</a></h3>
                           <div class="card__author">
                             <div class="card__author-inner">
                               <div class="card__author-image"><img src="../../images-patternlab/buffy-35-35.jpg"></div>
@@ -733,7 +733,7 @@
                       <article class="card card--background">
                         <div class="card__content">
                           <h2 class="card__type">Toolkit</h2>
-                          <h3 class="card__title"><a href="http://baconipsum.com/">Bacon ipsum dolor sit amet turducken strip steak beef ribs shank</a></h3>
+                          <h3 class="card__title"><a href="http://chrisvalleskey.com/fillerama/">Help, help, I'm being repressed!</a></h3>
                           <div class="card__author">
                             <div class="card__author-inner">
                               <div class="card__author-image"><img src="../../images-patternlab/buffy-35-35.jpg"></div>
@@ -755,7 +755,7 @@
                       <article class="card">
                         <div class="card__content">
                           <h2 class="card__type">Toolkit</h2>
-                          <h3 class="card__primary-title"><a href="http://chrisvalleskey.com/fillerama/">Rebel Mission to Ord Mantell</a></h3>
+                          <h3 class="card__primary-title"><a href="http://www.niemanlab.org/journo-ipsum/">Marshall McLuhan Colbert bump backpack journalist vast wasteland Romenesko CPM</a></h3>
                           <div class="card__author">
                             <div class="card__author-image"><img src="../../images-patternlab/buffy-35-35.jpg"></div>
                             <div class="card__author-name">Buffy Summers</div>
@@ -785,7 +785,7 @@
                       <article class="card">
                         <div class="card__content">
                           <h2 class="card__type">Toolkit</h2>
-                          <h3 class="card__primary-title"><a href="http://cupcakeipsum.com/">Danish danish candy canes bonbon cheesecake danish marzipan</a></h3>
+                          <h3 class="card__primary-title"><a href="http://www.cheeseipsum.co.uk/">Cottage cheese brie lancashire. Boursin when the cheese comes out.</a></h3>
                           <div class="card__author">
                             <div class="card__author-image"><img src="../../images-patternlab/buffy-35-35.jpg"></div>
                             <div class="card__author-name">Buffy Summers</div>
@@ -815,7 +815,7 @@
                       <article class="card">
                         <div class="card__content">
                           <h2 class="card__type">Toolkit</h2>
-                          <h3 class="card__primary-title"><a href="http://baconipsum.com/">Bacon ipsum dolor sit amet turducken strip steak beef ribs shank</a></h3>
+                          <h3 class="card__primary-title"><a href="http://chrisvalleskey.com/fillerama/">Help, help, I'm being repressed!</a></h3>
                           <div class="card__author">
                             <div class="card__author-image"><img src="../../images-patternlab/buffy-35-35.jpg"></div>
                             <div class="card__author-name">Buffy Summers</div>
@@ -852,12 +852,12 @@
                     <div class="views-row">
                       <article class="card">
                         <div class="card__image">
-                          <a href="http://chrisvalleskey.com/fillerama/"><img src="http://lorempixel.com/500/300/transport/3/" alt="Card 5:3" height="300" width="500">
+                          <a href="http://www.niemanlab.org/journo-ipsum/"><img src="http://lorempixel.com/500/300/nature/3/" alt="Card 5:3" height="300" width="500">
 </a>
                         </div>
                         <div class="card__content">
-                          <h3 class="card__title"><a href="http://chrisvalleskey.com/fillerama/">Rebel Mission to Ord Mantell</a></h3>
-                          <div><p>I find your lack of faith disturbing. A tremor in the Force. The last time I felt it was in the presence of my old master. Don't act so surprised, Your Highness. You weren't on any mercy mission this time. Several transmissions were beamed to this ship by Rebel spies. I want to know what happened to the plans they sent you. The plans you refer to will soon be back in our hands.</p></div>
+                          <h3 class="card__title"><a href="http://www.niemanlab.org/journo-ipsum/">Marshall McLuhan Colbert bump backpack journalist vast wasteland Romenesko CPM</a></h3>
+                          <div><p>Like button audience atomization overcome Colbert bump Free Darko inverted pyramid we will make them pay, digital circulation strategy Like button totally blowing up on Twitter church of the savvy. Pictures of Goats section open source discuss Frontline analog thinking filters paidContent.</p></div>
                           <div class="card__counts">
                             <div class="view">
                               <div class="has-icon--innovation" title="Innovations">12</div>
@@ -875,12 +875,12 @@
                     <div class="views-row">
                       <article class="card">
                         <div class="card__image">
-                          <a href="http://cupcakeipsum.com/"><img src="http://lorempixel.com/500/300/nightlife/3/" alt="Card 5:3" height="300" width="500">
+                          <a href="http://www.cheeseipsum.co.uk/"><img src="http://lorempixel.com/500/300/abstract/3/" alt="Card 5:3" height="300" width="500">
 </a>
                         </div>
                         <div class="card__content">
-                          <h3 class="card__title"><a href="http://cupcakeipsum.com/">Danish danish candy canes bonbon cheesecake danish marzipan</a></h3>
-                          <div><p>Sugar plum wafer soufflé ice cream. Wafer topping biscuit pie gummi bears topping. Gummies toffee powder applicake oat cake cookie. Bear claw candy tootsie roll fruitcake danish applicake candy canes macaroon. Liquorice tiramisu danish cotton candy gummies. Tiramisu dessert gummi bears macaroon sweet roll jelly-o gummi bears marzipan.</p></div>
+                          <h3 class="card__title"><a href="http://www.cheeseipsum.co.uk/">Cottage cheese brie lancashire. Boursin when the cheese comes out.</a></h3>
+                          <div><p>Queso caerphilly cheesecake. Parmesan chalk and cheese port-salut port-salut babybel cottage cheese cheesy grin pepper jack. Croque monsieur paneer st. agur blue cheese emmental airedale monterey jack bavarian bergkase cheese triangles. Halloumi parmesan.</p></div>
                           <div class="card__counts">
                             <div class="view">
                               <div class="has-icon--innovation" title="Innovations">12</div>
@@ -898,12 +898,12 @@
                     <div class="views-row">
                       <article class="card">
                         <div class="card__image">
-                          <a href="http://baconipsum.com/"><img src="http://lorempixel.com/500/300/city/3/" alt="Card 5:3" height="300" width="500">
+                          <a href="http://chrisvalleskey.com/fillerama/"><img src="http://lorempixel.com/500/300/cats/3/" alt="Card 5:3" height="300" width="500">
 </a>
                         </div>
                         <div class="card__content">
-                          <h3 class="card__title"><a href="http://baconipsum.com/">Bacon ipsum dolor sit amet turducken strip steak beef ribs shank</a></h3>
-                          <div><p>Boudin sausage jerky pastrami ground round salami biltong. Sausage fatback strip steak doner pork loin, pork belly drumstick ham short loin hamburger shankle. Short ribs sirloin rump tri-tip beef biltong. Meatball pig salami, jowl pork loin fatback short loin drumstick andouille.</p></div>
+                          <h3 class="card__title"><a href="http://chrisvalleskey.com/fillerama/">Help, help, I'm being repressed!</a></h3>
+                          <div><p>The Knights Who Say Ni demand a sacrifice! …Are you suggesting that coconuts migrate? Knights of Ni, we are but simple travelers who seek the enchanter who lives beyond these woods. You don't frighten us, English pig-dogs! Go and boil your bottoms, sons of a silly person! I blow my nose at you, so-called Ah-thoor Keeng, you and all your silly English K-n-n-n-n-n-n-n-niggits!</p></div>
                           <div class="card__counts">
                             <div class="view">
                               <div class="has-icon--innovation" title="Innovations">12</div>
@@ -929,7 +929,7 @@
                     <div class="views-row">
                       <article class="card">
                         <div class="card__content">
-                          <h3 class="card__primary-title"><a href="http://chrisvalleskey.com/fillerama/">Rebel Mission to Ord Mantell</a></h3>
+                          <h3 class="card__primary-title"><a href="http://www.niemanlab.org/journo-ipsum/">Marshall McLuhan Colbert bump backpack journalist vast wasteland Romenesko CPM</a></h3>
                           <div class="card__number">$30,000,000</div>
                           <div class="card__due-date">Due by: 3/21/2015</div> 
                           <div class="card__list">
@@ -961,7 +961,7 @@
                     <div class="views-row">
                       <article class="card">
                         <div class="card__content">
-                          <h3 class="card__primary-title"><a href="http://cupcakeipsum.com/">Danish danish candy canes bonbon cheesecake danish marzipan</a></h3>
+                          <h3 class="card__primary-title"><a href="http://www.cheeseipsum.co.uk/">Cottage cheese brie lancashire. Boursin when the cheese comes out.</a></h3>
                           <div class="card__number">$30,000,000</div>
                           <div class="card__due-date">Due by: 3/21/2015</div> 
                           <div class="card__list">
@@ -993,7 +993,7 @@
                     <div class="views-row">
                       <article class="card">
                         <div class="card__content">
-                          <h3 class="card__primary-title"><a href="http://baconipsum.com/">Bacon ipsum dolor sit amet turducken strip steak beef ribs shank</a></h3>
+                          <h3 class="card__primary-title"><a href="http://chrisvalleskey.com/fillerama/">Help, help, I'm being repressed!</a></h3>
                           <div class="card__number">$30,000,000</div>
                           <div class="card__due-date">Due by: 3/21/2015</div> 
                           <div class="card__list">
