--- a/public/sites/all/themes/gesso/patternlab/public/patterns/03-templates-innovation-detail/03-templates-innovation-detail.escaped.html
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/03-templates-innovation-detail/03-templates-innovation-detail.escaped.html
@@ -723,22 +723,39 @@
                   &lt;input type=&quot;submit&quot; class=&quot;button button--submit&quot; value=&quot;Comment&quot;&gt;
                 &lt;/div&gt;
               &lt;/form&gt;
-              &lt;div class=&quot;layout-slat comment comment--by-node-author view-mode-full&quot;&gt;
+            
+                
+              &lt;div class=&quot;layout-slat comment view-mode-full&quot;&gt;
                 &lt;div class=&quot;layout-slat__media&quot;&gt;
-                  &lt;span&gt;
-                    &lt;a class=&quot;username&quot; title=&quot;View user profile.&quot; href=&quot;/users/forumone&quot;&gt;forumone&lt;/a&gt;
-                  &lt;/span&gt;
-                &lt;/div&gt;
-                &lt;div class=&quot;layout-slat__content&quot;&gt;
-                  &lt;div class=&quot;field field--post-date&quot;&gt;
-                    &lt;div class=&quot;field-items&quot;&gt;
-                      &lt;div class=&quot;field-item even&quot;&gt;03/10/2015 - 4:29pm&lt;/div&gt;
+                  &lt;div class=&quot;view view-comment-author&quot;&gt;
+                    &lt;div class=&quot;views-row&quot;&gt;      
+                      &lt;div class=&quot;views-field views-field-rendered-entity&quot;&gt;        
+                        &lt;span class=&quot;field-content&quot;&gt;
+                          &lt;div class=&quot;user-profile view-mode-user_teaser profile-thumb&quot;&gt;
+                            &lt;div class=&quot;field profile-thumb__image--rounded&quot;&gt;
+                              &lt;a href=&quot;#&quot;&gt;&lt;img alt=&quot;&quot; src=&quot;../../images-patternlab/sherlock-78-78.jpg&quot;&gt;&lt;/a&gt;
+                            &lt;/div&gt;
+                            &lt;div class=&quot;field profile-thumb__name&quot;&gt;
+                              &lt;a href=&quot;#&quot;&gt;Sherlock Holmes&lt;/a&gt;
+                            &lt;/div&gt;
+                          &lt;/div&gt;
+                        &lt;/span&gt;  
+                      &lt;/div&gt;  
                     &lt;/div&gt;
                   &lt;/div&gt;
-                  &lt;div class=&quot;field field--comment-body&quot;&gt;
-                    &lt;div class=&quot;field-items&quot;&gt;
-                      &lt;div class=&quot;field-item even&quot;&gt;
-                        &lt;p&gt;Now !&lt;/p&gt;
+                &lt;/div&gt;
+                &lt;div class=&quot;layout-slat__content&quot;&gt;
+                  &lt;div class=&quot;comment__content&quot;&gt;
+                    &lt;div class=&quot;field field--post-date&quot;&gt;
+                      &lt;div class=&quot;field-items&quot;&gt;
+                        &lt;div class=&quot;field-item even&quot;&gt;03/10/2015 - 4:29pm&lt;/div&gt;
+                      &lt;/div&gt;
+                    &lt;/div&gt;
+                    &lt;div class=&quot;field field--comment-body&quot;&gt;
+                      &lt;div class=&quot;field-items&quot;&gt;
+                        &lt;div class=&quot;field-item even&quot;&gt;
+                          &lt;p&gt;Oh, what, now? I'm in shock! Look, I've got a blanket.&lt;/p&gt;
+                        &lt;/div&gt;
                       &lt;/div&gt;
                     &lt;/div&gt;
                   &lt;/div&gt;
@@ -752,18 +769,35 @@
               &lt;div class=&quot;indented&quot;&gt;
                 &lt;div class=&quot;layout-slat comment comment--by-node-author view-mode-full&quot;&gt;
                   &lt;div class=&quot;layout-slat__media&quot;&gt;
-                    &lt;a class=&quot;username&quot; title=&quot;View user profile.&quot; href=&quot;/users/forumone&quot;&gt;forumone&lt;/a&gt;
-                  &lt;/div&gt;
-                  &lt;div class=&quot;layout-slat__content&quot;&gt;
-                    &lt;div class=&quot;field field--post-date&quot;&gt;
-                      &lt;div class=&quot;field-items&quot;&gt;
-                        &lt;div class=&quot;field-item even&quot;&gt;03/10/2015 - 4:30pm&lt;/div&gt;
+                    &lt;div class=&quot;view view-comment-author&quot;&gt;
+                      &lt;div class=&quot;views-row&quot;&gt;      
+                        &lt;div class=&quot;views-field views-field-rendered-entity&quot;&gt;        
+                          &lt;span class=&quot;field-content&quot;&gt;
+                            &lt;div class=&quot;user-profile view-mode-user_teaser profile-thumb&quot;&gt;
+                              &lt;div class=&quot;field profile-thumb__image--rounded&quot;&gt;
+                                &lt;a href=&quot;#&quot;&gt;&lt;img alt=&quot;&quot; src=&quot;../../images-patternlab/buffy-78-78.jpg&quot;&gt;&lt;/a&gt;
+                              &lt;/div&gt;
+                              &lt;div class=&quot;field profile-thumb__name&quot;&gt;
+                                &lt;a href=&quot;#&quot;&gt;Buffy Summers&lt;/a&gt;
+                              &lt;/div&gt;
+                            &lt;/div&gt;
+                          &lt;/span&gt;  
+                        &lt;/div&gt;  
                       &lt;/div&gt;
                     &lt;/div&gt;
-                    &lt;div class=&quot;field field--comment-body&quot;&gt;
-                      &lt;div class=&quot;field-items&quot;&gt;
-                        &lt;div class=&quot;field-item even&quot;&gt;
-                          &lt;p&gt;Reply&lt;/p&gt;
+                  &lt;/div&gt;
+                  &lt;div class=&quot;layout-slat__content&quot;&gt;
+                    &lt;div class=&quot;comment__content&quot;&gt;
+                      &lt;div class=&quot;field field--post-date&quot;&gt;
+                        &lt;div class=&quot;field-items&quot;&gt;
+                          &lt;div class=&quot;field-item even&quot;&gt;03/10/2015 - 4:33pm&lt;/div&gt;
+                        &lt;/div&gt;
+                      &lt;/div&gt;
+                      &lt;div class=&quot;field field--comment-body&quot;&gt;
+                        &lt;div class=&quot;field-items&quot;&gt;
+                          &lt;div class=&quot;field-item even&quot;&gt;
+                            &lt;p&gt;It's my first day! I was afraid that I was gonna be behind in all my classes, that I wouldn't make any friends, that I would have last month's hair. I didn't think there'd be vampires on campus.&lt;/p&gt;
+                          &lt;/div&gt;
                         &lt;/div&gt;
                       &lt;/div&gt;
                     &lt;/div&gt;
@@ -777,18 +811,35 @@
                 &lt;div class=&quot;indented&quot;&gt;
                   &lt;div class=&quot;layout-slat comment comment--by-node-author view-mode-full&quot;&gt;
                     &lt;div class=&quot;layout-slat__media&quot;&gt;
-                      &lt;a class=&quot;username&quot; title=&quot;View user profile.&quot; href=&quot;/users/forumone&quot;&gt;forumone&lt;/a&gt;
-                    &lt;/div&gt;
-                    &lt;div class=&quot;layout-slat__content&quot;&gt;
-                      &lt;div class=&quot;field field--post-date&quot;&gt;
-                        &lt;div class=&quot;field-items&quot;&gt;
-                          &lt;div class=&quot;field-item even&quot;&gt;03/10/2015 - 4:30pm&lt;/div&gt;
+                      &lt;div class=&quot;view view-comment-author&quot;&gt;
+                        &lt;div class=&quot;views-row&quot;&gt;      
+                          &lt;div class=&quot;views-field views-field-rendered-entity&quot;&gt;        
+                            &lt;span class=&quot;field-content&quot;&gt;
+                              &lt;div class=&quot;user-profile view-mode-user_teaser profile-thumb&quot;&gt;
+                                &lt;div class=&quot;field profile-thumb__image--rounded&quot;&gt;
+                                  &lt;a href=&quot;#&quot;&gt;&lt;img alt=&quot;&quot; src=&quot;../../images-patternlab/willow-78-78.jpg&quot;&gt;&lt;/a&gt;
+                                &lt;/div&gt;
+                                &lt;div class=&quot;field profile-thumb__name&quot;&gt;
+                                  &lt;a href=&quot;#&quot;&gt;Willow Rosenberg&lt;/a&gt;
+                                &lt;/div&gt;
+                              &lt;/div&gt;
+                            &lt;/span&gt;  
+                          &lt;/div&gt;  
                         &lt;/div&gt;
                       &lt;/div&gt;
-                      &lt;div class=&quot;field field--comment-body&quot;&gt;
-                        &lt;div class=&quot;field-items&quot;&gt;
-                          &lt;div class=&quot;field-item even&quot;&gt;
-                            &lt;p&gt;Reply&lt;/p&gt;
+                    &lt;/div&gt;
+                    &lt;div class=&quot;layout-slat__content&quot;&gt;
+                      &lt;div class=&quot;comment__content&quot;&gt;
+                        &lt;div class=&quot;field field--post-date&quot;&gt;
+                          &lt;div class=&quot;field-items&quot;&gt;
+                            &lt;div class=&quot;field-item even&quot;&gt;03/10/2015 - 4:34pm&lt;/div&gt;
+                          &lt;/div&gt;
+                        &lt;/div&gt;
+                        &lt;div class=&quot;field field--comment-body&quot;&gt;
+                          &lt;div class=&quot;field-items&quot;&gt;
+                            &lt;div class=&quot;field-item even&quot;&gt;
+                              &lt;p&gt;Well, when I'm with a boy I like, it's hard for me to say anything cool or witty or at all. I can usually make a few vowel sounds, and then I have to go away.&lt;/p&gt;
+                            &lt;/div&gt;
                           &lt;/div&gt;
                         &lt;/div&gt;
                       &lt;/div&gt;
@@ -802,20 +853,37 @@
                   &lt;div class=&quot;indented&quot;&gt;
                     &lt;div class=&quot;layout-slat comment comment--by-node-author view-mode-full&quot;&gt;
                       &lt;div class=&quot;layout-slat__media&quot;&gt;
-                        &lt;a class=&quot;username&quot; title=&quot;View user profile.&quot; href=&quot;/users/forumone&quot;&gt;forumone&lt;/a&gt;
-                      &lt;/div&gt;
-                      &lt;div class=&quot;layout-slat__content&quot;&gt;
-                        &lt;div class=&quot;field field--post-date&quot;&gt;
-                          &lt;div class=&quot;field-items&quot;&gt;
-                            &lt;div class=&quot;field-item even&quot;&gt;03/10/2015 - 4:30pm&lt;/div&gt;
+                        &lt;div class=&quot;view view-comment-author&quot;&gt;
+                          &lt;div class=&quot;views-row&quot;&gt;      
+                            &lt;div class=&quot;views-field views-field-rendered-entity&quot;&gt;        
+                              &lt;span class=&quot;field-content&quot;&gt;
+                                &lt;div class=&quot;user-profile view-mode-user_teaser profile-thumb&quot;&gt;
+                                  &lt;div class=&quot;field profile-thumb__image--rounded&quot;&gt;
+                                    &lt;a href=&quot;#&quot;&gt;&lt;img alt=&quot;&quot; src=&quot;../../images-patternlab/sherlock-78-78.jpg&quot;&gt;&lt;/a&gt;
+                                  &lt;/div&gt;
+                                  &lt;div class=&quot;field profile-thumb__name&quot;&gt;
+                                    &lt;a href=&quot;#&quot;&gt;Sherlock Holmes&lt;/a&gt;
+                                  &lt;/div&gt;
+                                &lt;/div&gt;
+                              &lt;/span&gt;  
+                            &lt;/div&gt;  
                           &lt;/div&gt;
                         &lt;/div&gt;
-                        &lt;div class=&quot;field field--comment-body&quot;&gt;
-                          &lt;div class=&quot;field-items&quot;&gt;
-                            &lt;div class=&quot;field-item even&quot;&gt;
-                              &lt;p&gt;Reply&lt;/p&gt;
+                      &lt;/div&gt;
+                      &lt;div class=&quot;layout-slat__content&quot;&gt;
+                        &lt;div class=&quot;comment__content&quot;&gt;
+                          &lt;div class=&quot;field field--post-date&quot;&gt;
+                            &lt;div class=&quot;field-items&quot;&gt;
+                              &lt;div class=&quot;field-item even&quot;&gt;03/10/2015 - 4:35pm&lt;/div&gt;
                             &lt;/div&gt;
                           &lt;/div&gt;
+                          &lt;div class=&quot;field field--comment-body&quot;&gt;
+                            &lt;div class=&quot;field-items&quot;&gt;
+                              &lt;div class=&quot;field-item even&quot;&gt;
+                                &lt;p&gt;Shut up everybody, shut up! Don't move, don't speak, don't breathe, I'm trying to think. Anderson, face the other way, you're putting me off.&lt;/p&gt;
+                              &lt;/div&gt;
+                            &lt;/div&gt;
+                          &lt;/div&gt;            
                         &lt;/div&gt;
                         &lt;ul class=&quot;nav--inline nav--comment nav&quot;&gt;
                           &lt;li class=&quot;nav__item nav__item--comment-delete&quot;&gt;&lt;a class=&quot;nav__link&quot; href=&quot;/comment/2/delete&quot;&gt;delete&lt;/a&gt;&lt;/li&gt;
@@ -825,6 +893,47 @@
                       &lt;/div&gt;
                     &lt;/div&gt;
                   &lt;/div&gt;
+                &lt;/div&gt;
+              &lt;/div&gt;
+              &lt;div class=&quot;layout-slat comment view-mode-full&quot;&gt;
+                &lt;div class=&quot;layout-slat__media&quot;&gt;
+                  &lt;div class=&quot;view view-comment-author&quot;&gt;
+                    &lt;div class=&quot;views-row&quot;&gt;      
+                      &lt;div class=&quot;views-field views-field-rendered-entity&quot;&gt;        
+                        &lt;span class=&quot;field-content&quot;&gt;
+                          &lt;div class=&quot;user-profile view-mode-user_teaser profile-thumb&quot;&gt;
+                            &lt;div class=&quot;field profile-thumb__image--rounded&quot;&gt;
+                              &lt;a href=&quot;#&quot;&gt;&lt;img alt=&quot;&quot; src=&quot;../../images-patternlab/sherlock-78-78.jpg&quot;&gt;&lt;/a&gt;
+                            &lt;/div&gt;
+                            &lt;div class=&quot;field profile-thumb__name&quot;&gt;
+                              &lt;a href=&quot;#&quot;&gt;Sherlock Holmes&lt;/a&gt;
+                            &lt;/div&gt;
+                          &lt;/div&gt;
+                        &lt;/span&gt;  
+                      &lt;/div&gt;  
+                    &lt;/div&gt;
+                  &lt;/div&gt;
+                &lt;/div&gt;
+                &lt;div class=&quot;layout-slat__content&quot;&gt;
+                  &lt;div class=&quot;comment__content&quot;&gt;
+                    &lt;div class=&quot;field field--post-date&quot;&gt;
+                      &lt;div class=&quot;field-items&quot;&gt;
+                        &lt;div class=&quot;field-item even&quot;&gt;03/12/2015 - 3:33pm&lt;/div&gt;
+                      &lt;/div&gt;
+                    &lt;/div&gt;
+                    &lt;div class=&quot;field field--comment-body&quot;&gt;
+                      &lt;div class=&quot;field-items&quot;&gt;
+                        &lt;div class=&quot;field-item even&quot;&gt;
+                          &lt;p&gt;You, being all mysterious with your cheekbones and turning your coat collar up so you look cool.&lt;/p&gt;
+                        &lt;/div&gt;
+                      &lt;/div&gt;
+                    &lt;/div&gt;
+                  &lt;/div&gt;
+                  &lt;ul class=&quot;nav--inline nav--comment nav&quot;&gt;
+                    &lt;li class=&quot;nav__item nav__item--comment-delete&quot;&gt;&lt;a class=&quot;nav__link&quot; href=&quot;/comment/1/delete&quot;&gt;delete&lt;/a&gt;&lt;/li&gt;
+                    &lt;li class=&quot;nav__item nav__item--comment-delete nav__item nav__item--comment-edit&quot;&gt;&lt;a class=&quot;nav__link&quot; href=&quot;/comment/1/edit&quot;&gt;edit&lt;/a&gt;&lt;/li&gt;
+                    &lt;li class=&quot;nav__item nav__item--comment-delete nav__item nav__item--comment-edit nav__item nav__item--comment-reply&quot;&gt;&lt;a class=&quot;nav__link&quot; href=&quot;/comment/reply/2/1&quot;&gt;reply&lt;/a&gt;&lt;/li&gt;
+                  &lt;/ul&gt;
                 &lt;/div&gt;
               &lt;/div&gt;
             &lt;/section&gt;          
