--- a/public/sites/all/themes/gesso/patternlab/public/patterns/04-pages-00-homepage/04-pages-00-homepage.html
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/04-pages-00-homepage/04-pages-00-homepage.html
@@ -676,12 +676,12 @@
                   <div class="views-row">
           <article class="card">
             <div class="card__image">
-              <a href="http://slipsum.com/lite/"><img src="http://lorempixel.com/500/300/people/3/" alt="Card 5:3" height="300" width="500">
+              <a href="http://hipsteripsum.me/"><img src="http://lorempixel.com/500/300/business/3/" alt="Card 5:3" height="300" width="500">
 </a>
             </div>
             <div class="card__content">
-              <h3 class="card__title"><a href="http://slipsum.com/lite/">Yeah, I like animals better than people sometimes</a></h3>
-              <div><p>Especially dogs. Dogs are the best. Every time you come home, they act like they haven't seen you in a year. And the good thing about dogs... is they got different dogs for different people. Like pit bulls. The dog of dogs. Pit bull can be the right man's best friend... or the wrong man's worst enemy. You going to give me a dog for a pet, give me a pit bull.</p></div>
+              <h3 class="card__title"><a href="http://hipsteripsum.me/">Whatever swag accusamus occupy, gentrify butcher tote bag</a></h3>
+              <div><p>Fanny pack ullamco et veniam semiotics. Shoreditch PBR reprehenderit cliche, magna Tonx aesthetic. Narwhal photo booth DIY aute post-ironic anim. Vice cliche brunch est before they sold out fap, street art Odd Future fashion axe messenger bag nihil Tonx tattooed. Nihil hashtag incididunt, do eu art party Banksy jean shorts four loko typewriter.</p></div>
               <div class="card__counts">
                 <div class="view">
                   <div class="has-icon--evidence" title="Evidence">0</div>
@@ -734,12 +734,12 @@
                   <div class="views-row">
           <article class="card">
             <div class="card__image">
-              <a href="http://baconipsum.com/"><img src="http://lorempixel.com/500/300/city/3/" alt="Card 5:3" height="300" width="500">
+              <a href="http://chrisvalleskey.com/fillerama/"><img src="http://lorempixel.com/500/300/cats/3/" alt="Card 5:3" height="300" width="500">
 </a>
             </div>
             <div class="card__content">
-              <h3 class="card__title"><a href="http://baconipsum.com/">Bacon ipsum dolor sit amet turducken strip steak beef ribs shank</a></h3>
-              <div><p>Boudin sausage jerky pastrami ground round salami biltong. Sausage fatback strip steak doner pork loin, pork belly drumstick ham short loin hamburger shankle. Short ribs sirloin rump tri-tip beef biltong. Meatball pig salami, jowl pork loin fatback short loin drumstick andouille.</p></div>
+              <h3 class="card__title"><a href="http://chrisvalleskey.com/fillerama/">Help, help, I'm being repressed!</a></h3>
+              <div><p>The Knights Who Say Ni demand a sacrifice! …Are you suggesting that coconuts migrate? Knights of Ni, we are but simple travelers who seek the enchanter who lives beyond these woods. You don't frighten us, English pig-dogs! Go and boil your bottoms, sons of a silly person! I blow my nose at you, so-called Ah-thoor Keeng, you and all your silly English K-n-n-n-n-n-n-n-niggits!</p></div>
               <div class="card__counts">
                 <div class="view">
                   <div class="has-icon--evidence" title="Evidence">0</div>
@@ -763,12 +763,12 @@
                   <div class="views-row">
           <article class="card">
             <div class="card__image">
-              <a href="http://www.cheeseipsum.co.uk/"><img src="http://lorempixel.com/500/300/abstract/3/" alt="Card 5:3" height="300" width="500">
+              <a href="http://baconipsum.com/"><img src="http://lorempixel.com/500/300/city/3/" alt="Card 5:3" height="300" width="500">
 </a>
             </div>
             <div class="card__content">
-              <h3 class="card__title"><a href="http://www.cheeseipsum.co.uk/">Cottage cheese brie lancashire. Boursin when the cheese comes out.</a></h3>
-              <div><p>Queso caerphilly cheesecake. Parmesan chalk and cheese port-salut port-salut babybel cottage cheese cheesy grin pepper jack. Croque monsieur paneer st. agur blue cheese emmental airedale monterey jack bavarian bergkase cheese triangles. Halloumi parmesan.</p></div>
+              <h3 class="card__title"><a href="http://baconipsum.com/">Bacon ipsum dolor sit amet turducken strip steak beef ribs shank</a></h3>
+              <div><p>Boudin sausage jerky pastrami ground round salami biltong. Sausage fatback strip steak doner pork loin, pork belly drumstick ham short loin hamburger shankle. Short ribs sirloin rump tri-tip beef biltong. Meatball pig salami, jowl pork loin fatback short loin drumstick andouille.</p></div>
               <div class="card__counts">
                 <div class="view">
                   <div class="has-icon--evidence" title="Evidence">0</div>
@@ -803,7 +803,7 @@
                   <div class="views-row">
           <article class="card">
             <div class="card__content">
-              <h3 class="card__primary-title"><a href="http://slipsum.com/lite/">Yeah, I like animals better than people sometimes</a></h3>
+              <h3 class="card__primary-title"><a href="http://hipsteripsum.me/">Whatever swag accusamus occupy, gentrify butcher tote bag</a></h3>
               <div class="card__number">$30,000,000</div>
               <div class="card__due-date">Due by: 3/21/2015</div> 
               <div class="card__list">
@@ -867,7 +867,7 @@
                   <div class="views-row">
           <article class="card">
             <div class="card__content">
-              <h3 class="card__primary-title"><a href="http://baconipsum.com/">Bacon ipsum dolor sit amet turducken strip steak beef ribs shank</a></h3>
+              <h3 class="card__primary-title"><a href="http://chrisvalleskey.com/fillerama/">Help, help, I'm being repressed!</a></h3>
               <div class="card__number">$30,000,000</div>
               <div class="card__due-date">Due by: 3/21/2015</div> 
               <div class="card__list">
@@ -899,7 +899,7 @@
                   <div class="views-row">
           <article class="card">
             <div class="card__content">
-              <h3 class="card__primary-title"><a href="http://www.cheeseipsum.co.uk/">Cottage cheese brie lancashire. Boursin when the cheese comes out.</a></h3>
+              <h3 class="card__primary-title"><a href="http://baconipsum.com/">Bacon ipsum dolor sit amet turducken strip steak beef ribs shank</a></h3>
               <div class="card__number">$30,000,000</div>
               <div class="card__due-date">Due by: 3/21/2015</div> 
               <div class="card__list">
